# truth_guards

./: .gitignore  Dockerfile  LICENSE  README.md  about.md  built_with.txt  docker-compose.yaml  pitch.txt  presentation.html  presentation.md  pyproject.toml  requirements.txt  supervisord.conf
.claude/: settings.local.json
config/: config.docker.yaml  config.yaml
src/truthguards/: __init__.py
src/truthguards/api/: __init__.py  main.py  routes.py  schemas.py
src/truthguards/core/: __init__.py  config.py  weaviate_client.py
src/truthguards/mcp/: __init__.py  server.py
src/truthguards/ui/: streamlit_app.py
tests/: __init__.py  conftest.py  test_api.py  test_mcp.py  test_weaviate_client.py
